Setup User Authentication System

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,26 @@
 @import "bootstrap";
 @import "clean-blog.min.scss";
+.alert{
+    margin:0;
+    position:fixed; 
+    top: 0px; 
+    left: 0px; 
+    width: 100%;
+    z-index:9999; 
+    border: 0;
+    border-radius:0px;
+    background-color: #55B559;
+    padding: 28px;
+    text-align: center;
+    color: #fff;
+    font-weight: 450;
+    .close{
+        color: #fff !important;
+        opacity: 0.80;
+    }
+    .close:hover{
+        color: #fff !important;
+        opacity: 1;
+    }
+
+}
