--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,12 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <%= render 'shared/navbar_public' %>
+    <%= render 'shared/alert' %>
+    <% if author_signed_in? %>
+      <%= render 'shared/navbar_author' %>
+    <% else %>
+      <%= render 'shared/navbar_public' %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
