--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,44 @@
-<h2>Forgot your password?</h2>
+<header class="masthead" style="background-image: url('https://images.pexels.com/photos/567540/pexels-photo-567540.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260')">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading">
+            <h2>Reset Password</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+</header>
+<div class="container" style="margin-top: -15vh">
+  <div class="row">
+    <div class="col-lg-5 col-md-5 mx-auto">
+      <div class="card px-2 py-2">
+        <div class="card-body">
+        <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+          <div class="form-inputs">
+            <%= f.input :email,
+                        label: false,
+                        placeholder: 'Email',
+                        required: true,
+                        hint: 'Enter your valid email to get the reset instructions',
+                        autofocus: true,
+                        input_html: { autocomplete: "email" } %>
+          </div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
+          <div class="form-actions">
+            <%= f.button :submit, "Reset", :class=>"btn btn-warning" %>
+            <%- if controller_name != 'sessions' %>
+              <%= link_to "Log in", new_session_path(resource_name), :class=>"btn btn-success" %><br />
+            <% end %>
+          </div>
+        <% end %>
+
+        
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
