--- a/app/views/shared/_navbar_author.html.erb
+++ b/app/views/shared/_navbar_author.html.erb
@@ -14,7 +14,7 @@
             <%= link_to "Browse All Posts", posts_path, :class=>"nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">About</a>
+            <%= link_to "About", about_path, :class=>"nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Write Post", new_post_path, :class=>"nav-link" %>
