--- a/app/views/shared/_navbar_public.html.erb
+++ b/app/views/shared/_navbar_public.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <%= link_to "BLOG-BASIC-CB", root_path, :class=>"navbar-brand" %>
+      <%= link_to "ZIANAH", root_path, :class=>"navbar-brand" %>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
